--- a/styles/style.css
+++ b/styles/style.css
@@ -31,23 +31,35 @@ h2 {
 
 }
 
-section {
+section:first-of-type {
+
 }
 
 .itemscontainer {
     display: flex;
     min-width: 100%;
     flex-wrap: wrap;
+    flex-direction: row;
 
+}
+article {
+    margin: 0.6em;
+    max-width: 11.5625em;
 }
 
 article img {
-    max-width: 100%;
+    width: 100%;
+    height: auto;
+    vertical-align: middle;
 }
 
-article h4 p{
-    font-size: 13px;
-    font-weight: 200;
+h4 + p {
+    display: block;
+    max-width: inherit;
+    font-size:  0.8125em;
+    font-weight: 500;
+    text-align: center;
+
 }
 
 p {}
