--- a/styles/style.css
+++ b/styles/style.css
@@ -19,8 +19,70 @@ body {
     line-height: 1.3125em;
     color: rgba(35, 35, 35, 1);
 }
+.headerimg {
+    display: flex;
+    width: 15em;
+    align-self: center;
+}
 
-h1 {}
+.ham {
+    position: absolute;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 2.5em;
+    height: 2.5em;
+    border: none;
+    cursor: pointer;
+    background-color: transparent;
+    background-size: 100%;
+}
+
+.closeHam {
+    position: absolute;
+    left: 19em;
+    color: black;
+}
+
+.navbar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 20em;
+    background-color: white;
+    overflow: hidden;
+    transform: translateX(-100%);
+    transition: transform 0.3s ease;
+
+}
+
+.showNav {
+    transform: translateX(0);
+}
+
+ul {
+    margin: 0;
+    padding: 13px 20px 11px;
+    left: 0;
+    top: 0;
+    bottom: 0;
+}
+
+li {
+    display: block;
+    max-width: 25em;
+    margin: 0;
+    padding: 0.7em 1.25em 0.7em;
+    font-size: 1em;
+    font-weight: 700;
+    text-transform: uppercase;
+    border-bottom: 1px solid rgba(247, 247, 247, 1);
+    list-style-type: none;
+}
+
+h1 {
+    text-align: center;
+}
 
 h2 {
     font-weight: 700;
@@ -42,58 +104,60 @@ section:first-of-type {
     flex-direction: row;
 
 }
+
+a {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column-reverse;
+    justify-content: flex-end
+    
+}
+
 article {
     margin: 0.6em;
-    max-width: 11.5625em;
+    max-width: 11.3em;
 }
 
 article img {
     width: 100%;
     height: auto;
     vertical-align: middle;
+    border: none;
 }
 
-h4 + p {
+article h4 {
+    margin: auto;
+    padding: 0;
+    color: #232323;
     display: block;
     max-width: inherit;
-    font-size:  0.8125em;
+    min-height: 5em;
+    text-transform: none;
+    font-size: 13px;
+    line-height: 23px;
     font-weight: 500;
     text-align: center;
 
 }
 
-p {}
+article p {
+    width: inherit;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 23px;
+    letter-spacing: normal;
+    margin-bottom: 12px;
+    text-align: center;
+    color: rgba(132, 132, 197, 1);
+}
 
-nav {
-    overflow: hidden;
-    position: relative;
-
+span {
+    color: rgba(152, 152, 151, 1);
+    text-decoration: line-through;
 }
 
 
-ul {
-    display: none;
-    margin: 0;
-    padding: 13px 20px 11px;
-    left: 0;
-    top: 0;
-    bottom: 0;
-}
 
-li {
-    display: block;
-    max-width: 25em;
-    margin: 0;
-    padding: 0.7em 1.25em 0.7em;
-    font-size: 1em;
-    font-weight: 700;
-    text-transform: uppercase;
-    border-bottom: 1px solid rgba(247, 247, 247, 1);
-    list-style-type: none;
-}
-
-
-a {}
 
 a:link {}
 
