--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,11 @@
 /* Generic styling */
 * {}
 
+html,
+body {
+    margin: 0;
+}
+
 html {
     font: 100% / 250% "Helvetica";
 }
@@ -19,89 +24,151 @@ body {
     line-height: 1.3125em;
     color: rgba(35, 35, 35, 1);
 }
-.headerimg {
+
+/* general */
+h1 {
+    text-align: center;
+}
+
+/*CATEGORY TITLE*/
+h2 {
     display: flex;
-    width: 15em;
-    align-self: center;
+    font-weight: 700;
+    text-transform: uppercase;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
 }
 
-.ham {
+h2 span {
+    display: inline-block;
+    position: relative;
+}
+
+h2 span:before,
+h2 span:after {
+    content: "";
     position: absolute;
-    z-index: 1000;
-    left: 0;
-    top: 0;
-    width: 2.5em;
-    height: 2.5em;
-    border: none;
-    cursor: pointer;
-    background-color: transparent;
-    background-size: 100%;
+    height: 5px;
+    border-bottom: 0.1em solid rgba(224, 224, 224, 1);
+    top: 0.20em;
+    width: 80vw;
 }
 
-.closeHam {
-    position: absolute;
-    left: 19em;
-    color: black;
+h2 span:before {
+    right: 100%;
+    margin-right: 1em;
 }
 
-.navbar {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 20em;
-    background-color: white;
-    overflow: hidden;
-    transform: translateX(-100%);
-    transition: transform 0.3s ease;
+h2 span:after {
+    left: 100%;
+    margin-left: 1em;
+}
+
+/*TOPMESSAGE*/
+header section:nth-of-type(1) {
+    display: flex;
+    font-size: 0.8em;
+    color: white;
+    background-color: rgba(24, 76, 129, 1);
+}
+
+header section:nth-of-type(1) h2 {
+    text-align: center;
+    align-items: center;
+}
+
+/*NAVIGATION BAR*/
+header {
+    background-color: rgba(255, 255, 255, 1);
 
 }
 
-.showNav {
-    transform: translateX(0);
+header a:first-of-type {
+    padding: 0.5em;
+
 }
 
-ul {
-    margin: 0;
-    padding: 13px 20px 11px;
-    left: 0;
-    top: 0;
-    bottom: 0;
+header a:first-of-type img {
+    height: 3em;
 }
 
-li {
+header a:last-of-type {
     display: block;
+    padding: 0.5em;
+}
+
+header section:nth-of-type(2) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    border-bottom: 0.2em solid rgba(247, 247, 247, 1);
+}
+
+/*NAVIGATION HAMBURGERMENU*/
+nav {
+    transform: translateX(-145%);
+}
+
+header section:nth-of-type(2) button {
+    position: relative;
+    width: 3em;
+    height: 3em;
+    border: none;
+    background-color: transparent;
+    z-index: 1;
+
+}
+
+header section:nth-of-type(2) button img {
+    width: 2em;
+    height: 2em;
+}
+
+nav ul {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background: white;
+    transform: translateX(-100%);
+    list-style-type: none;
+}
+
+nav li {
     max-width: 25em;
     margin: 0;
     padding: 0.7em 1.25em 0.7em;
     font-size: 1em;
     font-weight: 700;
     text-transform: uppercase;
-    border-bottom: 1px solid rgba(247, 247, 247, 1);
-    list-style-type: none;
+    border-bottom: 0.1em solid rgba(247, 247, 247, 1);
 }
 
-h1 {
-    text-align: center;
+nav.showNavigation {
+    transform: translateX(-45%);
 }
 
-h2 {
-    font-weight: 700;
-    text-transform: uppercase;
+nav.closeNavigation {
+    transform: translateX(-145%);
 }
 
-.title {
-
+/*HEADER IMG*/
+header section:nth-of-type(3) img {
+    padding: 0;
+    margin: 0;
+    left: 0;
+    width: 100vw;
+    max-height: 350px;
 }
 
-section:first-of-type {
 
-}
-
-.itemscontainer {
-    display: flex;
-    min-width: 100%;
-    flex-wrap: wrap;
-    flex-direction: row;
+/* Product section */
+main section {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(13em, 13em));
+    grid-template-rows: repeat(auto-fill, minmax(13em, 22em));
 
 }
 
@@ -109,13 +176,13 @@ a {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column-reverse;
-    justify-content: flex-end
-    
+    justify-content: flex-end;
+
 }
 
 article {
     margin: 0.6em;
-    max-width: 11.3em;
+    max-width: 40vw;
 }
 
 article img {
@@ -150,14 +217,56 @@ article p {
     text-align: center;
     color: rgba(132, 132, 197, 1);
 }
+main h3 {
+    display: flex;
 
-span {
+}
+
+main h3 button {
+    font-weight: 700;
+    text-transform: uppercase;
+    border-radius: 3em;
+    width: 50vw;
+    height: 4em;
+    color: rgba(142, 154, 231, 1);
+    background-color: white;
+    border-color: rgba(142, 154, 231, 1);
+}
+
+.oldprice {
     color: rgba(152, 152, 151, 1);
     text-decoration: line-through;
 }
 
+/* Section categories styling*/
+.categories {}
 
+.categoriesli {
+    display: block;
+    max-width: 25em;
+    margin: 0;
+    padding: 0.7em 1.25em 0.7em;
+    font-size: 0.9em;
+    font-weight: 700;
+    color: rgba(0, 123, 255, 1);
+    text-transform: capitalize;
+    list-style-type: none;
+}
+/*FOOTER*/
+footer {
+    background-color: rgba(250, 250, 250, 1);
+}
 
+footer h3 {
+    font-size: 0.9em;
+    border-bottom: 0.1em solid rgba(247, 247, 247, 1);
+}
+
+@media (min-width: 30em){
+    header section:nth-of-type(3) img:nth-of-type(1) {
+        display: none;
+    }
+}
 
 a:link {}
 
@@ -168,7 +277,10 @@ a:focus {}
 
 a:active {}
 
-button {}
+ul {}
+
+li {}
+
 
 /* form styling */
 form {}
@@ -184,10 +296,6 @@ input {}
 input:invalid {}
 
 /* Section styling */
-header {
-    background-color: rgba(255, 255, 255, 1);
-    
-}
 
 header h1 {}
 
@@ -210,7 +318,6 @@ article footer {}
 
 aside {}
 
-footer {}
 
 /* Component styling */
 section#some-ultra-cool-component {}
