--- a/styles/style.css
+++ b/styles/style.css
@@ -40,31 +40,6 @@ h2 {
     justify-content: center;
 }
 
-h2 span {
-    display: inline-block;
-    position: relative;
-}
-
-h2 span:before,
-h2 span:after {
-    content: "";
-    position: absolute;
-    height: 5px;
-    border-bottom: 0.1em solid rgba(224, 224, 224, 1);
-    top: 0.20em;
-    width: 80vw;
-}
-
-h2 span:before {
-    right: 100%;
-    margin-right: 1em;
-}
-
-h2 span:after {
-    left: 100%;
-    margin-left: 1em;
-}
-
 /*TOPMESSAGE*/
 header section:nth-of-type(1) {
     display: flex;
@@ -107,11 +82,21 @@ header section:nth-of-type(2) {
 
 /*NAVIGATION HAMBURGERMENU*/
 nav {
-    transform: translateX(-145%);
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: white;
+    width: 60vw;
+    height: 100vh;
+    color: rgba(35, 35, 35, 1);
+    transform: translateX(-100%);
+    transition: transform 0.5s ease;
 }
 
-header section:nth-of-type(2) button {
-    position: relative;
+.hamburger {
+    position: absolute;
+    top: 3.80em;
+    left: 1em;
     width: 3em;
     height: 3em;
     border: none;
@@ -120,38 +105,32 @@ header section:nth-of-type(2) button {
 
 }
 
-header section:nth-of-type(2) button img {
+.hamburger img {
     width: 2em;
     height: 2em;
 }
 
+
+nav.showNavigation {
+    transform: translateX(0);
+}
+
+nav.closeNavigation {}
+
+
 nav ul {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
-    background: white;
-    transform: translateX(-100%);
-    list-style-type: none;
+    background-color: white;
 }
 
 nav li {
-    max-width: 25em;
     margin: 0;
     padding: 0.7em 1.25em 0.7em;
-    font-size: 1em;
+    list-style: none;
+    max-width: 25em;
+    color: rgba(35, 35, 35, 1);
+    border-bottom: 0.1em solid rgba(247, 247, 247, 1);
     font-weight: 700;
     text-transform: uppercase;
-    border-bottom: 0.1em solid rgba(247, 247, 247, 1);
-}
-
-nav.showNavigation {
-    transform: translateX(-45%);
-}
-
-nav.closeNavigation {
-    transform: translateX(-145%);
 }
 
 /*HEADER IMG*/
@@ -217,6 +196,7 @@ article p {
     text-align: center;
     color: rgba(132, 132, 197, 1);
 }
+
 main h3 {
     display: flex;
 
@@ -252,6 +232,7 @@ main h3 button {
     text-transform: capitalize;
     list-style-type: none;
 }
+
 /*FOOTER*/
 footer {
     background-color: rgba(250, 250, 250, 1);
@@ -262,7 +243,7 @@ footer h3 {
     border-bottom: 0.1em solid rgba(247, 247, 247, 1);
 }
 
-@media (min-width: 30em){
+@media (min-width: 30em) {
     header section:nth-of-type(3) img:nth-of-type(1) {
         display: none;
     }
