--- a/styles/style.css
+++ b/styles/style.css
@@ -198,7 +198,9 @@ article p {
 }
 
 main h3 {
-    display: flex;
+    text-align: center;
+    margin: auto;
+
 
 }
 
@@ -206,7 +208,7 @@ main h3 button {
     font-weight: 700;
     text-transform: uppercase;
     border-radius: 3em;
-    width: 50vw;
+    width: 70vw;
     height: 4em;
     color: rgba(142, 154, 231, 1);
     background-color: white;
@@ -218,6 +220,24 @@ main h3 button {
     text-decoration: line-through;
 }
 
+/*Instagram Slider*/
+section:nth-of-type(2) {
+    display: flex;
+    flex-direction: column;    
+}
+
+section:nth-of-type(2) article ol {
+    background-color: red;
+    text-align: center;
+    list-style-type: none;
+
+}
+
+section:nth-of-type(2) article img {
+    width: 25em;
+    height: 20em;
+    position: relative;
+}
 /* Section categories styling*/
 .categories {}
 
