--- a/styles/style.css
+++ b/styles/style.css
@@ -43,6 +43,7 @@ h2 {
 /*TOPMESSAGE*/
 header section:nth-of-type(1) {
     display: flex;
+    justify-content: center;
     font-size: 0.8em;
     color: white;
     background-color: rgba(24, 76, 129, 1);
@@ -59,27 +60,32 @@ header {
 
 }
 
-header a:first-of-type {
-    padding: 0.5em;
-
-}
-
-header a:first-of-type img {
-    height: 3em;
-}
-
-header a:last-of-type {
-    display: block;
-    padding: 0.5em;
-}
-
 header section:nth-of-type(2) {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
+    align-items: center;
     border-bottom: 0.2em solid rgba(247, 247, 247, 1);
 }
 
+header section:nth-of-type(2) a img {
+    margin: 0.5em;
+    width: 15em;
+}
+header section:nth-of-type(2) a button {
+    position: absolute;
+    top: 3.5em;
+    right: 1em;
+    width: 3em;
+    height: 3em;
+    border: none;
+    background-color: transparent;
+    z-index: 1;
+}
+
+header section:nth-of-type(2) a button img {
+    width: 2em;
+    height: 2em;
+}
 /*NAVIGATION HAMBURGERMENU*/
 nav {
     position: absolute;
@@ -95,7 +101,7 @@ nav {
 
 .hamburger {
     position: absolute;
-    top: 3.80em;
+    top: 3.5em;
     left: 1em;
     width: 3em;
     height: 3em;
@@ -139,7 +145,11 @@ header section:nth-of-type(3) img {
     margin: 0;
     left: 0;
     width: 100vw;
-    max-height: 350px;
+}
+
+header section:nth-of-type(3) img:nth-of-type(2) {
+    width: 99vw;
+    margin-left: 0.15em;
 }
 
 
@@ -267,68 +277,8 @@ footer h3 {
     header section:nth-of-type(3) img:nth-of-type(1) {
         display: none;
     }
+     header section:nth-of-type(3) img:nth-of-type(2) {
+        margin: 0 2vw;
+        max-width: 95vw;
+    }
 }
-
-a:link {}
-
-a:visited {}
-
-a:hover,
-a:focus {}
-
-a:active {}
-
-ul {}
-
-li {}
-
-
-/* form styling */
-form {}
-
-fieldset {}
-
-legend {}
-
-label {}
-
-input {}
-
-input:invalid {}
-
-/* Section styling */
-
-header h1 {}
-
-main {}
-
-main button {}
-
-section {}
-
-section header {}
-
-section h2 {}
-
-
-article header {}
-
-article h3 {}
-
-article footer {}
-
-aside {}
-
-
-/* Component styling */
-section#some-ultra-cool-component {}
-
-
-/* Breakpoints */
-@media all and (min-width: 30em) {}
-
-@media all and (min-width: 60em) {}
-
-@media all and (min-width: 90em) {}
-
-*/
