--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,7 @@
 html,
 body {
     margin: 0;
+    padding: 0;
 }
 
 html {
@@ -72,7 +73,7 @@ header section:nth-of-type(2) a img {
     width: 15em;
 }
 
-header section:nth-of-type(2) a button {
+header section:nth-of-type(2) button {
     position: absolute;
     top: 3.5em;
     right: 1em;
@@ -83,7 +84,7 @@ header section:nth-of-type(2) a button {
     z-index: 1;
 }
 
-header section:nth-of-type(2) a button img {
+header section:nth-of-type(2) button img {
     width: 2em;
     height: 2em;
 }
@@ -266,14 +267,204 @@ section:nth-of-type(2) article img {
     list-style-type: none;
 }
 
+/*BLOG POSTS*/
+
+section:nth-of-type(6) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: relative;
+    max-width: 95vw;
+}
+
+section:nth-of-type(6) article {
+    /*display: none;*/
+}
+
+section:nth-of-type(6) img {
+    max-width: 355px;
+}
+
+.text {
+    width: 100%;
+}
+
+section:nth-of-type(6) h4 {
+    font-size: 1.0625em;
+    font-weight: 600;
+    text-align: center;
+    color: rgba(35, 35, 35, 1);
+}
+
+section:nth-of-type(6) h5 {
+    font-size: 0.8125em;
+    text-align: center;
+    color: rgba(153, 153, 153, 1);
+}
+
+section:nth-of-type(6) p {
+    font-size: 0.8125em;
+    font-weight: 400;
+    text-align: center;
+    color: rgba(60, 60, 60, 1);
+}
+
+.dot {
+    cursor: pointer;
+    height: 1em;
+    width: 1em;
+    margin: 0 0.5em;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: 0.6s ease;
+}
+/*PHOTOS DETAIL PAGE*/
+
+.detailphoto {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.detailphoto img {
+    margin: auto;
+    width: 22em;
+    
+}
+
+.productimages {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
+.productimages img {
+    width: 22em;
+    margin: auto;
+    padding: 1em 0 1em 0;
+}
+/*DESCRIPTION DETAIL PAGE*/
+
+.product_description {
+    margin: 0.5em;
+}
+
+.product_description button {
+    color: rgba(255, 255, 255, 1);
+    background-color: rgba(134, 149, 230, 1);
+    border-radius: 1.5625em;
+    width: 100%;
+    height: 3em;
+    border: none;
+    cursor: pointer;
+    font-size: 1.125em;
+    font-weight: 700;
+    text-transform: uppercase;
+    
+}
+
+/*FORM DETAILPAGE*/
+
+form {
+    display: flex;
+    flex-direction: column;
+    max-width: 28.125em;
+    margin: 0 auto;
+    padding: 1.5625em 1.25em;
+    background-color: rgba(243, 243, 243,1);
+    
+}
+form  div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0.625em 1.5625em 0.3125em;
+        
+}
+form h2 {
+    color: rgba(31, 31, 31, 1);
+    font-size: 1.875em;
+    font-family: 'Libre Baskerville', serif;
+}
+
+form p {
+    text-align: center;
+    font-size: 0.875em;
+    
+}
+form input {
+    padding: 0 0 0 1em;
+    height: 2.5em;
+    text-align: left;
+    font-size: 1em;
+    font-weight: 400;
+    border: 1px solid rgba(180, 187, 195,1);
+}
+
+form button {
+    color: rgba(255, 255, 255, 1);
+    background-color: rgba(134, 149, 230, 1);
+    border-radius: 1.5625em;
+    width: 100%;
+    height: 2.25em;
+    border: none;
+    cursor: pointer;
+    font-size: 1.125em;
+    font-weight: 700;
+    text-transform: uppercase;
+    
+    
+}
+
 /*FOOTER*/
 footer {
     background-color: rgba(250, 250, 250, 1);
+    padding: 2.625em 0;
+}
+
+footer p {
+    display: block;
+    margin: auto;
+    width: 21em;
+    text-align: center;
+    color: rgba(112, 112, 112, 1);
+    font-size: 0.8125em;
+}
+
+footer p span {
+    font-weight: 700;
+}
+
+footer h2 {
+    font-size: 0.875em;
 }
 
 footer h3 {
     font-size: 0.9em;
+    text-transform: uppercase;
+    margin: 0 0 0.9em;
+    padding: 0 0.625em;
     border-bottom: 0.1em solid rgba(247, 247, 247, 1);
+}
+
+footer form {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin: 0;
+    padding: 0;
+    background-color: rgba(250, 250, 250, 1);
+}
+
+footer input {
+    width: 14em;
+}
+
+footer button {
+    width: 7.5em;
+    height: 2.5em;
 }
 
 @media (min-width: 30em) {
