--- a/styles/style.css
+++ b/styles/style.css
@@ -52,6 +52,10 @@ main {
     padding: 0 0.625em;
 }
 
+a {
+    text-decoration: none;
+}
+
 /*TOPMESSAGE*/
 header section:nth-of-type(1) {
     display: flex;
@@ -67,6 +71,10 @@ header section:nth-of-type(1) {
 header {
     background-color: rgba(255, 255, 255, 1);
 
+}
+
+header section:nth-of-type(2) h2 {
+    display: none;
 }
 
 .navbar {
@@ -123,7 +131,6 @@ header section:nth-of-type(2) button img {
 
 .menucontent {
     position: absolute;
-    top: 0;
     left: 0;
     width: 85vw;
     height: 100vh;
@@ -158,6 +165,10 @@ nav li h3 {
 }
 
 /*HEADER IMG*/
+header section:nth-of-type(3) h5 {
+    display: none;
+}
+
 header section:nth-of-type(3) img:nth-of-type(1) {
     padding: 0;
     margin: 0;
@@ -181,6 +192,10 @@ main section {
     grid-template-rows: repeat(auto-fill, minmax(13em, 22em));
     grid-column-gap: 0.5em;
     margin: 0 0.25em;
+}
+
+.products h2 {
+    display: none;
 }
 
 .products article {
@@ -219,18 +234,36 @@ main section {
 }
 
 /*Show more button*/
-main button {
-    display: block;
-    align-content: center;
-    margin: auto;
+.button {
+    width: 100%;
     padding: 1.3em 0;
     font-weight: 700;
     text-transform: uppercase;
     border-radius: 3em;
-    width: 18.75em;
     color: rgba(142, 154, 231, 1);
     background-color: white;
     border: 0.2em solid rgba(142, 154, 231, 1);
+
+}
+
+/*Shipping info*/
+.shippinginfo {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    padding: 2em;
+
+}
+
+.shippinginfo h3 {
+    font-size: 1em;
+    font-weight: 500;
+    margin: 1em
+}
+
+.shippinginfo h3:nth-of-type(2),
+.shippinginfo h3:nth-of-type(3) {
+    display: none;
 }
 
 /*old price*/
@@ -255,8 +288,7 @@ main button {
 }
 
 .slider article h2 {
-    width: 95vw;
-    padding: 1em;
+    display: none;
 
 }
 
@@ -273,20 +305,6 @@ main button {
     width: 90vw;
 }
 
-/* Section categories styling*/
-.categories {}
-
-.categoriesli {
-    display: block;
-    max-width: 25em;
-    margin: 0;
-    padding: 0.7em 1.25em 0.7em;
-    font-size: 0.9em;
-    font-weight: 700;
-    color: rgba(0, 123, 255, 1);
-    text-transform: capitalize;
-    list-style-type: none;
-}
 
 /*SHOP COLLECTION*/
 .shopcollection {
@@ -295,7 +313,7 @@ main button {
 
 .photocollection {
     display: grid;
-    grid-template-columns: repeat(2, 12em);
+    grid-template-columns: repeat(2, minmax(13em, 19em));
     grid-gap: 0.5em;
 }
 
@@ -333,21 +351,24 @@ main button {
     margin: 2em 0;
     padding: 0 0 1.5em 0;
     border-bottom: 0.1em solid rgba(193, 193, 193, 1);
-    
+
 }
 
 .shopcollection ul li {
     list-style-type: none;
+    width: 100%;
     font-size: 0.9em;
     text-align: center;
     line-height: 3em;
     color: rgba(6, 136, 226, 1);
 }
+
 /*BLOG POSTS*/
 
 .blog_posts {
     display: block;
-    max-width: 95vw;
+    max-width: 85vw;
+    margin: 0 auto;
 }
 
 .blog_posts article {
@@ -404,13 +425,19 @@ main button {
 }
 
 /*PHOTOS DETAIL PAGE*/
+.photosdetailpage {
+    display: block;
+}
 
-.detailphoto {
+.photosdetailpage h2 {
+    display: none;
+}
+
+.photosdetailpage img {
     display: block;
     justify-content: center;
     flex-direction: column;
     width: 100%;
-    
 }
 
 .detailphoto img {
@@ -418,6 +445,7 @@ main button {
     width: 22em;
 
 }
+
 .miniproductscroll {
     display: flex;
     flex-wrap: nowrap;
@@ -429,26 +457,14 @@ main button {
     width: 5em;
     margin: 0.9em;
 }
+
 /*INFO PRODUCT DETAILPAGE*/
-.product_description h2 {
+.detailpagina {
     display: block;
-    text-align: left;
-    line-height: 1.5em;
-    text-transform: capitalize;
-    letter-spacing: 0.05em;
 }
 
-.tab {
-    overflow: hidden;
-}
-
-.tab button {
-    transition: 0.3s;
-}
-
-.tabcontent {
+.detailpagina h2 {
     display: none;
-    
 }
 
 .product_description {
@@ -456,25 +472,117 @@ main button {
     margin: 0.5em;
 }
 
+.product_description h2 {
+    display: block;
+    text-align: left;
+    line-height: 1.5em;
+    text-transform: capitalize;
+    letter-spacing: 0.05em;
+    margin: 0.5em 0;
+}
+
+.rating {
+    display: flex;
+    margin: 0 0.1em 1em 0;
+    padding: 0 0 1.5em 0;
+    border-bottom: 1px solid rgba(180, 187, 195, 1);
+
+}
+
+.rating p {
+    color: rgba(132, 132, 197, 1);
+}
+
+.rating img {
+    width: 1em;
+}
+
+/*PRICE DETAILPAGE*/
+.price {
+    margin: 0.2em;
+    font-size: 1.4em;
+    font-weight: 500;
+    color: rgba(132, 132, 197, 1);
+}
+
+
+/*COLOR SELECT DETAILPAGE*/
+.colorselect {
+    display: block;
+}
+
+.colorselect h4 {
+    font-weight: 500;
+    text-transform: capitalize;
+    margin: 0.2em;
+}
+
+select {
+    width: 100%;
+    margin: 0.6em 0;
+    padding: 0.6em 0.5em;
+    border-color: rgba(180, 187, 195, 1);
+}
+
+/*ADD TO CART*/
+
 .product_description button {
+    margin: 0.5em 0 1em 0;
+    font-size: 1.1em;
+    font-weight: 700;
     color: rgba(255, 255, 255, 1);
     background-color: rgba(134, 149, 230, 1);
     border-radius: 1.5625em;
     width: 100%;
     height: 3em;
     border: none;
-    cursor: pointer;
-    font-size: 1.125em;
-    font-weight: 700;
     text-transform: uppercase;
+}
 
+/*Description and free shipping*/
+
+.tab {
+    display: flex;
+    margin: 1em 0 0 0;
+    padding: 0;
+    background-color: white;
+}
+
+.tab button {
+    color: black;
+    background-color: white;
+    border-radius: 0;
+    border-bottom: 0.1em solid rgba(193, 193, 193, 1);
+}
+
+.tab button:nth-of-type(1) {
+    border-bottom: 0.2em solid black;
+}
+
+.description {
+    display: block;
+    text-align: center;
+    font-size: 0.9em;
+}
+
+.description p,
+.description ul {
+    margin: 1.5em 0;
+    color: rgba(110, 112, 107, 1);
+}
+
+.description ul li {
+    padding: 0.3em 0;
 }
 
 /*Photo Gallery*/
 .productimages {
     display: flex;
+    position: relative;
     flex-direction: column;
     justify-content: center;
+    width: 100%;
+    height: auto;
 
 }
 
@@ -489,7 +597,7 @@ main button {
 form {
     display: flex;
     flex-direction: column;
-    max-width: 28.125em;
+    width: 28.125em;
     margin: 0 auto;
     padding: 1.5625em 1.25em;
     background-color: rgba(243, 243, 243, 1);
@@ -504,10 +612,10 @@ form div {
 
 }
 
-form h2 {
+form h3 {
     color: rgba(31, 31, 31, 1);
-    font-size: 1.875em;
-    font-family: 'Libre Baskerville', serif;
+    font-size: 1.2em;
+    text-align: center;
 }
 
 form p {
@@ -529,6 +637,7 @@ form button {
     color: rgba(255, 255, 255, 1);
     background-color: rgba(134, 149, 230, 1);
     border-radius: 1.5625em;
+    padding: 0;
     width: 100%;
     height: 2.25em;
     border: none;
@@ -540,8 +649,119 @@ form button {
 
 }
 
+/*BACK TO TOP*/
+.top {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    font-weight: 400;
+    padding: 2em;
+    color: rgba(37, 145, 228, 1);
+}
+
+.top:hover {
+    cursor: pointer;
+}
+
+.top:focus {
+    color: rgba(134, 149, 230, 1);
+    border: 1px solid rgba(134, 149, 230, 1);
+    border-radius: 25% 25% 25% 25%;
+}
+
+.top:active {
+    color: black;
+}
+
+/*REVIEWS DETAILPAGE*/
+.reviews {
+    display: block;
+    position: relative;
+}
+
+.reviews button {
+    position: absolute;
+    right: 1em;
+    width: 10em;
+    height: 1em;
+    border: 0.1em solid rgba(180, 187, 195, 1);
+    border-radius: 5%;
+    font-size: 0.8em;
+    color: black;
+    padding-top: 0.4em;
+    padding-bottom: 1.7em;
+    text-transform: none;
+    font-weight: 500;
+    font-family: 'Poppins';
+
+}
+
+.reviews ol {
+    display: grid;
+    justify-content: center;
+    grid-template-columns: repeat(2, minmax(10vw, 40vw));
+    grid-template-rows: repeat(autofill, minmax(22em, 23em));
+}
+
+.reviews li {
+    margin: 0.25em;
+    list-style-type: none;
+    border: 1px solid rgba(180, 187, 195, 1);
+}
+
+.reviews li img {
+    width: 100%;
+}
+
+.rating2 {
+    display: flex;
+    width: 1em;
+    margin: 0.5em 0.5em;
+}
+
+.reviews h3,
+.reviews p {
+    margin: 1em;
+    font-size: 0.9em;
+}
+
+/*TRENDINGNOW SCROLL*/
+.trendingnow_scroll {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: flex-start;
+    overflow: scroll;
+    overflow-y: hidden;
+}
+
+.trendingnow_scroll h2 {
+    display: none;
+}
+
+.trendingnow_scroll a {
+    padding: 0.5em;
+}
+
+.trendingnow_scroll img {
+    width: 13em;
+    height: 13em;
+}
+
+.trendingnow_scroll h4 {
+    font-size: 0.9em;
+    font-weight: 400;
+    text-align: center;
+}
+
+.trendingnow_scroll p {
+    text-align: center;
+    color: rgba(134, 149, 230, 1);
+}
+
 /*FOOTER*/
 footer {
+    display: block;
     background-color: rgba(250, 250, 250, 1);
     padding: 2.625em 0;
 }
@@ -560,6 +780,9 @@ footer p span {
 }
 
 footer h2 {
+    display: block;
+    justify-content: center;
+    margin: 1em;
     font-size: 0.875em;
 }
 
@@ -567,16 +790,22 @@ footer h3 {
     font-size: 0.9em;
     text-transform: uppercase;
     margin: 0 0 0.9em;
-    padding: 0 0.625em;
+    padding: 0 1em;
     border-bottom: 0.1em solid rgba(247, 247, 247, 1);
+}
+
+footer ul {
+    margin: 1em;
 }
 
 footer form {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    width: 30em;
+    overflow: hidden;
     margin: 0;
     padding: 0;
+    justify-content: center;
     background-color: rgba(250, 250, 250, 1);
 }
 
@@ -598,6 +827,145 @@ footer button {
         margin: 0 2vw;
         max-width: 95vw;
     }
+
+}
+
+@media (min-width: 40em) {
+    .instagram_slider {
+        width: 70vw;
+    }
+
+    .slider article img {
+        width: 70vw;
+    }
+
+    .photocollection {
+        display: grid;
+        justify-content: center;
+        grid-template-columns: repeat(4, minmax(13em, 15em));
+        grid-gap: 0.5em;
+    }
+
+    .photocollection a:nth-of-type(3) {
+        order: -1;
+    }
+
+    .photocollection a:nth-of-type(6) {
+        order: -1;
+    }
+
+    .shopcollection ul {
+        grid-template-columns: repeat(3, minmax(8em, 23em));
+    }
+
+    .shippinginfo h3:nth-of-type(2),
+    .shippinginfo h3:nth-of-type(3) {
+        display: flex;
+    }
+
+    .detailpagina {
+        display: flex;
+        justify-content: center;
+    }
+
+    .photosdetailpage {
+        display: block;
+        width: 40vw;
+    }
+
+    .product_description {
+        display: block;
+        width: 40vw;
+    }
+
+    .description ul li {
+        list-style-type: none;
+
+    }
+
+    .productimages {
+        margin: -19em 0;
+        display: grid;
+        grid-template-columns: repeat(1, minmax(40vw, 51vw));
+        justify-content: flex-end;
+    }
+
+    .productimages h2 {
+        top: 15em;
+        height: 2em;
+        overflow: hidden;
+    }
+
+    .productimages img {
+        width: 40vw;
+        height: auto;
+    }
+
+    form {
+        display: flex;
+        position: relative;
+        width: 44vw;
+        margin: 0;
+        bottom: 5em;
+
+    }
+
+    .reviews ol {
+        grid-template-columns: repeat(3, minmax(10vw, 25vw));
+    }
+
+    .rating img {
+        width: 2em;
+    }
+
+    .reviews button {
+        width: 10em;
+        height: 3em;
+        font-size: 1em;
+    }
+
+    .footerresponsive {
+        display: flex;
+        justify-content: center;
+    }
+
+    .footerinfo,
+    .footershop,
+    .form {
+        display: block;
+        justify-content: center;
+        width: 100%;
+        margin: 0 4em;
+    }
+
+    footer form {
+        position: relative;
+        top: 3em;
+    }
+
+
+}
+
+@media (min-width: 60em) {
+    .instagram_slider {
+        width: 50vw;
+    }
+
+    .slider article img {
+        width: 50vw;
+    }
+
+    main section {
+        grid-template-columns: repeat(4, 17em);
+    }
+
+    .reviews ol {
+        grid-template-columns: repeat(3, minmax(10vw, 20vw));
+    }
+
+}
+
+@media (min-width: 75em) {
 
     .menucontent {
         display: flex;
@@ -635,31 +1003,74 @@ footer button {
     .navbar button:nth-of-type(3) {
         display: block;
     }
-
 }
 
-@media (min-width: 40em) {
-    .instagram_slider {
-        width: 70vw;
-    }
-
-    .slider article img {
-        width: 70vw;
-    }
-
-
+button:active {
+    background-color: purple;
 }
 
-@media (min-width: 64em) {
-    .instagram_slider {
-        width: 50vw;
+button:hover {
+    background-color: rebeccapurple;
+    border: 0.2em solid black;
+    animation: big 1s infinite;
+}
+
+button:focus {
+    background-color: darkblue;
+    outline: none;
+}
+
+button:visited {
+    background-color: mediumpurple;
+}
+
+
+form input:hover {
+    cursor: text;
+}
+
+form input:active {
+    cursor: text;
+    color: black;
+    border-color: purple;
+}
+
+form input:focus {
+    border-color: purple;
+}
+
+.tab button:focus {
+    outline: none;
+    background-color: lightgray;
+    border-bottom: 0.1em solid rgba(193, 193, 193, 1);
+}
+
+.tab button:hover {
+    background-color: darkgray;
+    outline: none;
+}
+
+.detail:hover {
+    color: purple;
+    outline: none;
+    animation: big 1s 2;
+}
+
+.detail:focus {
+    outline: none;
+    animation: big 1s infinite;
+}
+
+@keyframes big {
+    0% {
+        transform: scale(1.2);
     }
 
-    .slider article img {
-        width: 50vw;
+    50% {
+        transform: scale(1);
     }
 
-    main section {
-        grid-template-columns: repeat(4, 17em);
+    100% {
+        transform: scale(1.2);
     }
 }
